sqlx_insert/tests/ui/unknown_database.stderr
error: proc-macro derive panicked
 --> tests/ui/unknown_database.rs:4:10
  |
4 | #[derive(SQLInsert, Clone, Debug)]
  |          ^^^^^^^^^
  |
  = help: message: failed to expand SQLInsert macro: Error("batch_insert only works for postgres for now")
